@@ -33,16 +33,17 @@ t/Tags-Output-Raw/08-put-element.t
 t/Tags-Output-Raw/09-put-preserve_from_attribute.t
 t/Tags-Output-Raw/10-put-preserve_from_constructor.t
 t/Tags-Output-Raw/11-put-comment.t
-t/Tags-Output-Raw/12-put-no_simple.t
-t/Tags-Output-Raw/13-put-raw.t
-t/Tags-Output-Raw/14-put-cdata.t
-t/Tags-Output-Raw/15-put-output_handler.t
-t/Tags-Output-Raw/16-put-error.t
-t/Tags-Output-Raw/17-put-instruction.t
-t/Tags-Output-Raw/18-put-data_callback.t
-t/Tags-Output-Raw/19-put-skip_bad_tags.t
-t/Tags-Output-Raw/20-put-auto_flush.t
-t/Tags-Output-Raw/21-put-end_of_element.t
+t/Tags-Output-Raw/12-put-no_data_callback.t
+t/Tags-Output-Raw/13-put-no_simple.t
+t/Tags-Output-Raw/14-put-raw.t
+t/Tags-Output-Raw/15-put-cdata.t
+t/Tags-Output-Raw/16-put-output_handler.t
+t/Tags-Output-Raw/17-put-error.t
+t/Tags-Output-Raw/18-put-instruction.t
+t/Tags-Output-Raw/19-put-data_callback.t
+t/Tags-Output-Raw/20-put-skip_bad_tags.t
+t/Tags-Output-Raw/21-put-auto_flush.t
+t/Tags-Output-Raw/22-put-end_of_element.t
 t/Tags-Output/01-use.t
 t/Tags-Output/02-version.t
 t/Tags-Output/03-new.t
