@@ -1,4 +1,7 @@
 0.12
+ [Tags::Output]
+ - Add 'no_data_callback' parameter to set list of elements which not process
+   'data_callback'. Example is 'script' in which we don't need HTML escaping.
 
 0.11 2021-02-20T18:31:32+01:00
  [Common]
